# LowLevelGame2

./: .gitignore  README.md  debug.ps1  debug.sh  gitattributes  lowlevelgame.c  meson.build  release.ps1  release.sh  setup.ps1  setup.sh
.github/workflows/: build.yml
resources/: frag.frag  frag.glsl  light.frag  map.mtl  sb_vert.vert  test_mtl.mtl  vert.glsl  vert.vert
resources/assets/models/: map.mtl
resources/assets/shaders/: frag.frag  overlay.frag  overlay.vert  sb_frag.frag  sb_vert.vert  vert.vert
resources/static/: error_shader.frag  error_shader.vert
src/: camera.cpp  camera.h  config.hpp  gui.cpp  gui.h  logging.cpp  logging.h  main.cpp  main.h  scene_loader.cpp  scene_loader.h  shader.cpp  shader.h  utility.cpp  utility.h
src/engine/: game.h  loader.h  logging.cpp  logging.h  managers.cpp  managers.h  run.cpp  run.h  shader.cpp  shader.h  state.h  typedefs.h
src/engine/loader/: generic.cpp  generic.h  mesh.cpp  mesh.h  model.cpp  model.h  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  texture.h
src/engine/loader/shader/: compute_shader.h  graphics_shader.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h
src/engine/manager/: scene.cpp  scene.h  texture.cpp  texture.h
src/engine/render/: frame_buffer.cpp  frame_buffer.h  overlay.cpp  overlay.h
src/engine/resources/: material.h  mesh.cpp  mesh.h  resource_manager.cpp  resource_manager.h  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  texture.h
src/engine/util/: error.h  file.cpp  file.h  geometry.h  logging.cpp  logging.h
src/game/: camera.cpp  camera.h  camera_utils.cpp  camera_utils.h  game.cpp  game.h  gui.cpp  gui.h  gui_mac.cpp  player.cpp  player.h  skybox.cpp  skybox.h  state.h
subprojects/: assimp.wrap  imgui-docking.wrap  imgui.wrap
tools/: bin2h.cpp
